--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "webpack-merge": "*"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "prop-types": "*",
     "react": "*",
     "react-dom": "*"
