--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "axios": "^1.4.0",
     "prop-types": "*",
     "react": "*",
-    "react-dom": "*"
+    "react-dom": "*",
+    "react-router-dom": "^6.11.2"
   }
 }
