--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "jwt-decode": "^3.1.2",
     "notyf": "^3.10.0",
     "prop-types": "*",
     "react": "*",
