--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "eslint-plugin-jsx-a11y": "*",
     "eslint-plugin-react": "*",
     "eslint-plugin-react-hooks": "*",
-    "file-loader": "*",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "*",
     "mini-css-extract-plugin": "*",
     "postcss": "*",
@@ -55,6 +55,7 @@
     "prop-types": "*",
     "react": "*",
     "react-dom": "*",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "react-scroll": "^1.8.9"
   }
 }
